# PythonWEB_HW11-12-13-14

./: README.md  main.py  pyproject.toml
alembic/versions/: 173b3bbda2cf_fin.py  1ebf5ec4c81f_init.py
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 089732f66a3b_init.py  6c2819340d87_init.py  7ed9cec69279_init.py  b439623d47e9_init.py  bd9f9c1e60ef_init.py  de85faea04f0_init.py  e00403a16d76_init.py  e039e97e5ae5_init.py  e144d1a0e0ab_init.py  e31e5afac382_init.py  e3c89605037a_init.py
src/: schemas.py
src/conf/: config.ini  config.py
src/database/: db.py  models.py
src/migrations/: env.py
src/migrations/versions/: 17a94e363765_init.py  de15d0094ab9_init.py  eb576a1e5e2b_init.py  f2f3952bcfd9_init.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  avatar.py  contacts.py
src/services/: email.py  upload_avatar.py
src/services/templates/: email_template.html
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
